# stt-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  run_diarized_bench.py  run_parallel_bench.py  run_stt_bench.py  run_tts.py
output/: earnings-call-evaluation.md  stt-evaluation-results.md
output/diarized-transcripts/alphabet-q1-2026-earnings-call/: assemblyai_run1.txt  assemblyai_run2.txt  cartesia_run2.txt  deepgram_run2.txt  elevenlabs_run1.txt  elevenlabs_run2.txt  gemini_run1.txt  gemini_run2.txt
output/diarized-transcripts/anne-hathaway-interview/: assemblyai_run1.txt  assemblyai_run2.txt  cartesia_run2.txt  deepgram_run1.txt  deepgram_run2.txt  elevenlabs_run1.txt  elevenlabs_run2.txt
output/diarized-transcripts/friends-afford-dinner/: assemblyai_run1.txt  assemblyai_run2.txt  cartesia_run1.txt  deepgram_run1.txt  elevenlabs_run1.txt  elevenlabs_run2.txt
output/diarized-transcripts/kevin-small-talk-the-office/: assemblyai_run2.txt  cartesia_run2.txt  deepgram_run2.txt  elevenlabs_run1.txt  elevenlabs_run2.txt
src/stt/: assemblyai_stt.py  cartesia_stt.py  deepgram_stt.py  elevenlabs_stt.py  gemini_stt.py
src/tts/: cartesia_tts.py  deepgram_tts.py  elevenlabs_tts.py  google_tts.py  openai_tts.py  playht_tts.py  polly_tts.py
