[project]
name = "stt-benchmark"
version = "0.1.0"
description = "Benchmark speech-to-text providers on accuracy, diarization, and speed"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=1.0",
    "deepgram-sdk>=3.0",
    "openai>=1.0",
    "assemblyai>=0.30",
    "cartesia>=1.0",
    "pyht>=0.1",
    "google-cloud-texttospeech>=2.0",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "jiwer>=4.0.0",
    "google-genai>=2.6.0",
    "pydantic-settings>=2.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
